Added Positoning to css

--- a/index.html
+++ b/index.html
@@ -19,32 +19,11 @@
     <div class="wrapper">
         <div class="page">
             <div class="content">
-                Content Goes Here!
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo voluptatem obcaecati voluptates amet sit. Sequi sit mollitia rem officiis tempore commodi! Ipsam quo saepe nobis culpa. Corrupti sequi debitis totam.</p>
-                <p>Voluptatum odit mollitia inventore perferendis maiores error corrupti cumque nesciunt atque iste autem nobis eum quisquam molestiae repudiandae repellat maxime, est animi laudantium iusto laboriosam harum aspernatur? Inventore, aperiam magnam.</p>
-                <p>Facere aut et iste! Earum corrupti consequatur iste distinctio voluptatibus facere. Sequi, nesciunt earum? Temporibus, magnam. Ratione provident, temporibus numquam placeat, nesciunt soluta ipsum similique molestiae ducimus repudiandae quia voluptatem!</p>
-                <p>Pariatur officiis sint, voluptatum impedit rem perspiciatis sed repudiandae accusamus dolor sunt cupiditate maiores excepturi rerum nemo accusantium eaque perferendis facilis? Tempore incidunt dignissimos in voluptatem tenetur commodi provident fugiat.</p>
-                <p>Facilis rem, doloremque autem possimus alias laboriosam fugiat voluptas voluptatem velit est dolore culpa nam inventore necessitatibus in. Dolore laborum dolor in alias unde dignissimos fugit accusantium incidunt nulla ipsum.</p>
-                <p>Totam quae quaerat ipsum fugit quia vel blanditiis dolore amet tempore vitae. Quaerat doloribus minima aspernatur veritatis corporis. A officiis distinctio at mollitia magni sequi rerum consectetur ex delectus voluptates.</p>
-                <p>Dolore, aliquam non nulla tempora molestias suscipit. Harum, labore! Dicta sunt et dolores obcaecati voluptate reiciendis quisquam voluptates explicabo maiores, quas labore voluptatum vel inventore officiis deserunt id, aut sed.</p>
-                <p>Labore a totam dolorum possimus dolores deleniti nobis. Doloribus ipsa temporibus praesentium deleniti repudiandae odio dicta nesciunt asperiores, tempora facere aliquid quam maxime commodi. Maiores nam ex temporibus quaerat sequi.</p>
-                <p>Tempora dolor, nobis nulla iure soluta amet omnis ut eveniet deleniti, veritatis earum assumenda mollitia at. Quia sunt voluptatum vel quam totam, dolore explicabo, quo iure ex quaerat perspiciatis recusandae.</p>
-                <p>Culpa fugiat vel molestiae suscipit quo dolorum quod eos ratione non veniam officiis, tempora atque saepe aperiam cupiditate iusto provident, dolores nobis molestias ea temporibus! Porro error perferendis suscipit qui?</p>
-                <p>Sapiente repudiandae voluptatibus iusto omnis minus praesentium fuga adipisci, tempore cupiditate dolore optio. Quas minus nobis eveniet cum eaque maiores, velit sequi fugiat sed tempora quaerat odio fugit nihil asperiores.</p>
-                <p>Molestiae earum cum nostrum quis blanditiis et numquam similique aut voluptatibus! Beatae doloribus dolore cum eveniet obcaecati quas nulla, doloremque quia ut optio delectus laborum voluptas id ipsam, odio dicta!</p>
-                <p>Ullam qui eaque ipsa. Error doloribus architecto, consectetur quasi pariatur voluptatibus optio iusto ipsum est officiis non harum repellendus, tempora tenetur voluptatum possimus quisquam eius alias omnis qui! Ut, suscipit.</p>
-                <p>Voluptatibus molestiae, excepturi asperiores nam iste nihil velit sapiente amet fugiat alias deleniti eveniet repudiandae a ratione aliquam aut sunt cum, nobis dolores cupiditate assumenda, iusto ipsa dolorum? Magnam, iure?</p>
-                <p>Eos nulla sed neque exercitationem veritatis, nisi ex omnis, quia dignissimos, esse suscipit atque mollitia! Sunt natus harum temporibus soluta? Neque numquam a accusamus fugit sequi optio, nesciunt corporis. Ut.</p>
-                <p>Facere incidunt saepe sunt nemo praesentium alias id eaque ab, perferendis eum voluptate. Dolorum pariatur similique soluta totam magni. Labore id dolorum quam quia ullam error nisi quis cupiditate pariatur!</p>
-                <p>Nemo, fugit. Cumque, illum error, corporis earum dicta impedit odit necessitatibus praesentium laboriosam provident dolore quisquam vero consequuntur perspiciatis obcaecati magni expedita unde accusantium commodi adipisci? Eos enim dolorum velit!</p>
-                <p>Id alias illum, excepturi odit consectetur fuga velit fugit quas nam neque enim dolorum nulla necessitatibus ducimus beatae iusto architecto debitis. Autem ipsam adipisci dicta inventore, doloribus corrupti voluptas beatae?</p>
-                <p>Sed, quas iure error cupiditate minus nostrum. Nam ipsam earum ab sit quo unde, deleniti impedit a doloremque. Maiores rem corrupti quia incidunt culpa natus laudantium. Dicta magnam maxime odit!</p>
-                <p>Ab sunt incidunt provident eos laborum? Reiciendis autem corporis, saepe obcaecati repellat asperiores, praesentium illo possimus eaque vel quia nam voluptates ullam repellendus at, error eveniet. Qui, debitis exercitationem. Perferendis.</p>
-                <p>Dolorem aperiam aspernatur ab eos cupiditate consequatur atque mollitia sint tempora quae perferendis, ducimus repudiandae eligendi a accusantium iusto quas obcaecati provident voluptates et in nihil quia nemo! Numquam, sapiente?</p>
-                <p>Asperiores aspernatur sint, quibusdam eligendi voluptatem beatae corrupti dolorem atque eaque. Delectus architecto obcaecati odio impedit unde aspernatur voluptatibus adipisci, labore excepturi. Voluptatibus culpa deserunt maxime quam quibusdam esse magni!</p>
-                <p>Dolorum consectetur nemo sit libero iure impedit, minus dolore nesciunt dolorem, quae commodi. Voluptate, inventore facere fugit commodi dolores adipisci! Temporibus nemo facilis molestias earum sed doloribus obcaecati aut esse.</p>
-                <p>Ex unde hic natus ipsa perferendis laudantium repellat officia aliquid deleniti minus fugiat eius quo neque suscipit itaque voluptatum, ratione expedita quam inventore nobis doloremque. Ducimus itaque quis architecto aliquid?</p>
-                <p>Ducimus laborum quia explicabo fugiat quam officia assumenda consectetur! Voluptatem repellat fugiat commodi ipsum itaque nostrum modi voluptatibus ad laudantium velit, doloribus aut maiores eligendi perferendis! Voluptates sequi ipsa quaerat!</p>
+                <div class="stuff">
+                    <div class="notification"></div>
+                </div>
+                <div class="stuff"></div>
+                <div class="stuff"></div>
             </div>
         </div>
     </div> 
